# lensed_umap

./: .gitattributes  .gitignore  CHANGELOG.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: Docs.yml  Publish.yml  Tests.yml
ci/: export_name.py  export_sdist_name.py
docs/: conf.py  examples.rst  index.rst  reference.rst  requirements.txt
docs/_templates/: layout.html
lensed_umap/: api.py
lensed_umap/tests/: test_lenses.py
notebooks/: 01_How_lensed_UMAP_works.ipynb  02_Case_NKI.ipynb  04_Animate_Air_Quality_1.ipynb  04_Animate_Air_Quality_2.ipynb  04_Animate_Air_Quality_3.ipynb  04_Animate_Air_Quality_4.ipynb  04_Animate_Air_Quality_5.ipynb  04_Animate_Air_Quality_6.ipynb  04_Benchmark.ipynb  05_Benchmark.ipynb  05_Teaser.ipynb  06_Teaser.ipynb  _animate.py  _plotting.py
notebooks/data/: five_circles.csv
notebooks/data/air/: README.md  calidad-del-aire-datos-historicos-diarios.csv
notebooks/data/nki/: LICENSE  README.md  nki_exprs.csv  nki_obs.csv  nki_var.csv
notebooks/lib/: mapper.py  plotting.py
src/lensed_umap/: __init__.py  api.py  fast_impl.py
src/lensed_umap/tests/: __init__.py  test_lenses.py
