[metadata]
name = lensed_umap
version = 0.1.0
description = Untangle UMAP with lenses.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause license
author = Jelmer Bot
author_email = jelmer.bot@uhasselt.be
url = https://github.com/vda-lab/lensed_umap
download_urls = https://pypi.org/project/lensed_umap/
project_urls =
	Code = https://github.com/vda-lab/lensed_umap
	Issue tracker = https://github.com/vda-lab/lensed_umap/issues
classifiers =
	Development Status :: 4 - Beta
	License :: OSI Approved :: BSD License
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only

[options]
packages = 
	lensed_umap
	lensed_umap.tests
python_requires = >=3.9
setup_requires =
	setuptools >= 65.3.0
install_requires =
	numpy >= 1.23
	pandas >= 2.1.1
	scipy >= 1.9
	scikit-learn >= 1.1
	umap-learn >= 0.5.4
	numba >= 0.57.1